--- a/templates/misc/status-messages.html.twig
+++ b/templates/misc/status-messages.html.twig
@@ -38,13 +38,13 @@
            <h2 class="visually-hidden">{{ status_headings[type] }}</h2>
             <div class="messages__icon">
               {% if type == 'error' %}
-                {% include "@olivero/../images/error.svg" %}
+                {% include "@myolivero/../images/error.svg" %}
               {% elseif type == 'warning' %}
-                {% include "@olivero/../images/warning.svg" %}
+                {% include "@myolivero/../images/warning.svg" %}
               {% elseif type == 'status' %}
-                {% include "@olivero/../images/status.svg" %}
+                {% include "@myolivero/../images/status.svg" %}
               {% elseif type == 'info' %}
-                {% include "@olivero/../images/info.svg" %}
+                {% include "@myolivero/../images/info.svg" %}
               {% endif %}
             </div>
           </div>
