--- a/templates/block/block--secondary-menu--plugin-id--search-form-block.html.twig
+++ b/templates/block/block--secondary-menu--plugin-id--search-form-block.html.twig
@@ -36,7 +36,7 @@
   {{ title_suffix }}
   {% block content %}
     <button class="block-search-wide__button" aria-label="{{ 'Search Form'|t }}" data-drupal-selector="block-search-wide-button">
-      {% include "@olivero/../images/search.svg" %}
+      {% include "@myolivero/../images/search.svg" %}
       <div class="block-search-wide__button-close"></div>
     </button>
 
